k3s/generated_manifests/pihole/Deployment-pihole.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: pihole
    app.kubernetes.io/name: pihole
    chart: pihole-2.35.0
    heritage: Helm
    release: pihole
  name: pihole
  namespace: pihole
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: pihole
      release: pihole
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      annotations:
        checksum.config.adlists: 01ba4719c80b6fe911b091a7c05124b64eeece964e09c058ef8f9805daca546
        checksum.config.blacklist: 01ba4719c80b6fe911b091a7c05124b64eeece964e09c058ef8f9805daca546
        checksum.config.dnsmasqConfig: f7dd22b769ec298bef98b5a43da49e5297622f282ead353c24d890167f56608
        checksum.config.regex: 01ba4719c80b6fe911b091a7c05124b64eeece964e09c058ef8f9805daca546
        checksum.config.staticDhcpConfig: 01ba4719c80b6fe911b091a7c05124b64eeece964e09c058ef8f9805daca546
        checksum.config.whitelist: 01ba4719c80b6fe911b091a7c05124b64eeece964e09c058ef8f9805daca546
      labels:
        app: pihole
        app.kubernetes.io/name: pihole
        release: pihole
    spec:
      containers:
        - env:
            - name: FTLCONF_webserver_port
              value: "80"
            - name: VIRTUAL_HOST
              value: pi.hole
            - name: FTLCONF_misc_etc_dnsmasq_d
              value: "true"
            - name: FTLCONF_webserver_api_password
              valueFrom:
                secretKeyRef:
                  key: password
                  name: pihole-password
            - name: FTLCONF_dns_listeningMode
              value: all
            - name: FTLCONF_dns_upstreams
              value: 10.42.0.1;8.8.4.4
          image: pihole/pihole:2025.11.1
          imagePullPolicy: IfNotPresent
          livenessProbe:
            exec:
              command:
                - /bin/sh
                - -c
                - curl --silent http://localhost/api/info/login | jq 'if (.dns | not) then halt_error(1) end'
            failureThreshold: 10
            initialDelaySeconds: 60
            timeoutSeconds: 5
          name: pihole
          ports:
            - containerPort: 80
              name: http
              protocol: TCP
            - containerPort: 53
              name: dns
              protocol: TCP
            - containerPort: 53
              name: dns-udp
              protocol: UDP
            - containerPort: 443
              name: https
              protocol: TCP
            - containerPort: 67
              name: client-udp
              protocol: UDP
          readinessProbe:
            exec:
              command:
                - /bin/sh
                - -c
                - curl --silent http://localhost/api/info/login | jq 'if (.dns | not) then halt_error(1) end'
            failureThreshold: 10
            initialDelaySeconds: 60
            timeoutSeconds: 5
          resources: {}
          securityContext:
            privileged: false
          volumeMounts:
            - mountPath: /etc/pihole
              name: config
            - mountPath: /etc/dnsmasq.d/02-custom.conf
              name: custom-dnsmasq
              subPath: 02-custom.conf
            - mountPath: /etc/addn-hosts
              name: custom-dnsmasq
              subPath: addn-hosts
      dnsConfig:
        nameservers:
          - 127.0.0.1
          - 8.8.8.8
      dnsPolicy: None
      hostNetwork: false
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: pihole
        - configMap:
            defaultMode: 420
            name: pihole-custom-dnsmasq
          name: custom-dnsmasq
