k3s/generated_manifests/pihole/Service-pihole-dhcp.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: pihole
    app.kubernetes.io/name: pihole
    chart: pihole-2.35.0
    heritage: Helm
    release: pihole
  name: pihole-dhcp
  namespace: pihole
spec:
  externalTrafficPolicy: Local
  ports:
    - name: client-udp
      port: 67
      protocol: UDP
      targetPort: client-udp
  selector:
    app: pihole
    release: pihole
  type: NodePort
