k3s/generated_manifests/pihole/Service-pihole-dns-udp.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    metallb.universe.tf/address-pool: pool
    metallb.universe.tf/allow-shared-ip: pihole-svc
  labels:
    app: pihole
    app.kubernetes.io/name: pihole
    chart: pihole-2.35.0
    heritage: Helm
    release: pihole
  name: pihole-dns-udp
  namespace: pihole
spec:
  externalTrafficPolicy: Local
  loadBalancerIP: 10.42.1.250
  ports:
    - name: dns-udp
      port: 53
      protocol: UDP
      targetPort: dns-udp
  selector:
    app: pihole
    release: pihole
  type: LoadBalancer
