k3s/generated_manifests/pihole/Service-pihole-web.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    metallb.universe.tf/address-pool: pool
    metallb.universe.tf/allow-shared-ip: pihole-svc
  labels:
    app: pihole
    app.kubernetes.io/name: pihole
    chart: pihole-2.34.0
    heritage: Helm
    release: pihole
  name: pihole-web
  namespace: pihole
spec:
  externalTrafficPolicy: Local
  loadBalancerIP: 10.42.1.250
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
    - name: https
      port: 443
      protocol: TCP
      targetPort: https
  selector:
    app: pihole
    release: pihole
  type: LoadBalancer
