k3s/generated_manifests/pihole/Ingress-pihole.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pihole
  namespace: pihole
spec:
  ingressClassName: traefik
  rules:
    - host: pihole.doma.lol
