k3s/generated_manifests/pihole/IngressRoute-pihole.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: pihole
  namespace: pihole
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`pihole.doma.lol`)
      services:
        - name: pihole-web
          port: 80
